name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , common
               , reflex-dom
               , static
               , text
               , reflex-dom-core
               , reflex-dom-ace
  exposed-modules:
    Frontend
  ghc-options: -Wall

executable frontend
  main-is: src/main.hs
  build-depends: base
               , common
               , reflex-dom
               , static
               , text
               , frontend
  --TODO: Make these ghc-options optional
  ghc-options: -threaded
  if os(darwin)
     ghc-options: -dynamic
